JumpScript/tests/baselines/reference/ClassDeclaration8.errors.txt
tests/cases/compiler/ClassDeclaration8.jump(2,3): error TS2390: Constructor implementation is missing.


==== tests/cases/compiler/ClassDeclaration8.jump (1 errors) ====
    class C {
      constructor();
      ~~~~~~~~~~~~~~
!!! error TS2390: Constructor implementation is missing.
    }